--- a/recipes/oxtail.html
+++ b/recipes/oxtail.html
@@ -1,5 +1,5 @@
 <h1>Oxtail</h1>
-<img src="../img/oxtail.webp" alt="Oxtail Stew with vegetables in a bowl of Rice">
+<img src="../img/oxtail.jpg" alt="Oxtail Stew with vegetables in a bowl of Rice">
 <h2>Description</h2>
 Jamaican Style Oxtail Stew
 <h3>Ingredients</h3>
